--- a/app/src/main/res/layout/activity_blooth_search.xml
+++ b/app/src/main/res/layout/activity_blooth_search.xml
@@ -2,33 +2,130 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toggle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dragon4.owo.resight_android.BloothSearchActivity">
+    android:fitsSystemWindows="true"
+    android:id="@+id/blooth_constraintLayout"
+    tools:context="com.dragon4.owo.resight_android.Activity.BloothSearchActivity"
+    android:background="@color/colorPrimary"
+    >
 
-    <ProgressBar
-        android:layout_width="88dp"
-        android:layout_height="106dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="120dp"
-        android:id="@+id/progressBar" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        app:layout_constraintEnd_toEndOf="@+id/blooth_constraintLayout"
+        app:layout_constraintStart_toStartOf="@+id/blooth_constraintLayout"
+        android:id="@+id/view"
+        android:background="@color/colorBloothMenu"
+
+         />
+
+    <ImageView
+        android:id="@+id/blooth_imageView"
+        app:srcCompat="@drawable/icon_blooth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/blooth_constraintLayout"
+        app:layout_constraintTop_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+         />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="35dp"
-        android:text="Searching Resight..."
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="16sp"
+        android:text="블루투스 연결"
+        app:layout_constraintStart_toEndOf="@id/blooth_imageView"
+        app:layout_constraintTop_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+         />
+
+    <com.zcw.togglebutton.ToggleButton
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginEnd="25dp"
+         >
+    </com.zcw.togglebutton.ToggleButton>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        app:layout_constraintEnd_toEndOf="@+id/blooth_constraintLayout"
+        app:layout_constraintStart_toStartOf="@+id/blooth_constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        android:id="@+id/view2"
+        android:background="@color/colorBloothMenu"
+        />
+
+    <ImageView
+        android:id="@+id/paring_imageView"
+        app:srcCompat="@drawable/icon_paring"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/view2"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+         />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="최근 페어링 된 기기 : RE-SIGHT 3302 "
+        app:layout_constraintStart_toEndOf="@id/paring_imageView"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+         />
+
+    <TextView
+        android:id="@+id/resent_blooth_list_title"
+        android:text="Blooth 목록"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/blooth_constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
+    <ListView
+        android:id="@+id/blooth_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/resent_blooth_list_title"
+        android:layout_marginTop="7dp"
+       >
+
+    </ListView>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/blooth_list"
+        app:layout_constraintLeft_toRightOf="@id/blooth_constraintLayout"
+        app:layout_constraintRight_toLeftOf="@id/blooth_constraintLayout"
+        android:layout_marginTop="36dp"
+        android:layout_marginLeft="128dp"
+        android:layout_marginRight="128dp"
+        android:src="@drawable/icon_handphone"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
