--- a/app/src/main/res/layout/activity_blooth_search.xml
+++ b/app/src/main/res/layout/activity_blooth_search.xml
@@ -2,14 +2,12 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:toggle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/blooth_constraintLayout"
-    tools:context="com.dragon4.owo.resight_android.Activity.BloothSearchActivity"
-    android:background="@color/colorPrimary"
-    >
+    tools:context="com.dragon4.owo.resight_android.Activity.BluetoothSearchActivity"
+    android:background="@color/colorPrimary">
 
     <View
         android:layout_width="0dp"
@@ -47,6 +45,7 @@
          />
 
     <com.zcw.togglebutton.ToggleButton
+        android:id="@+id/check_blooth_button"
         android:layout_width="40dp"
         android:layout_height="20dp"
         app:layout_constraintTop_toBottomOf="parent"
@@ -80,7 +79,7 @@
          />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/recent_paring_device_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
