--- a/app/src/main/res/layout/activity_resight_main.xml
+++ b/app/src/main/res/layout/activity_resight_main.xml
@@ -33,6 +33,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_gravity="bottom|end"
         android:layout_width="56dp"
         android:layout_height="56dp"
@@ -40,7 +41,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         app:srcCompat="@drawable/fab_add"
-
         />
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
