--- a/app/src/main/res/layout/market_gridview_item.xml
+++ b/app/src/main/res/layout/market_gridview_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="150dp"
-    android:layout_height="152dp"
+    android:layout_height="202dp"
     android:fitsSystemWindows="true"
     android:id="@+id/market_category_item"
     android:background="#FFFFFF">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/market_item_imageView"
         app:layout_constraintTop_toBottomOf="@+id/market_category_item"
         app:layout_constraintLeft_toLeftOf="@+id/market_category_item"
