--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,12 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
@@ -17,9 +9,13 @@
     android:id="@+id/hand_motion_fragment_layout"
     android:background="#F2F2F2">
 
-
+    <Button
+        android:id="@+id/test_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="블루투스 통신 확인"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
 
-</android.support.design.widget.CoordinatorLayout>
