add realtime graph

--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -9,13 +9,15 @@
     android:id="@+id/hand_motion_fragment_layout"
     android:background="#F2F2F2">
 
-    <Button
-        android:id="@+id/test_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="블루투스 통신 확인"
-        />
-
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
 </android.support.constraint.ConstraintLayout>
 
