--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -13,11 +13,79 @@
         android:id="@+id/sensor_graph0"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph1"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_graph0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph2"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_graph1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph3"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_graph2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph4"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_graph3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/sensor_graph5"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_graph4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp" />
 
 </android.support.constraint.ConstraintLayout>
 
