--- a/app/src/main/res/layout/activity_customize_dialog.xml
+++ b/app/src/main/res/layout/activity_customize_dialog.xml
@@ -50,6 +50,7 @@
         android:background="#95989A"
         app:layout_constraintLeft_toLeftOf="@+id/custom_app_dialog_activity"
         app:layout_constraintTop_toTopOf="@+id/custom_app_dialog_activity"
+        android:src="@drawable/icon_hand00_open"
         android:layout_marginStart="35dp"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="120dp"
@@ -63,6 +64,7 @@
         android:background="#95989A"
         app:layout_constraintLeft_toRightOf="@+id/first_hand_button"
         app:layout_constraintTop_toTopOf="@+id/custom_app_dialog_activity"
+        android:src="@drawable/icon_hand01_closed"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="120dp"
@@ -76,6 +78,7 @@
         android:background="#95989A"
         app:layout_constraintLeft_toRightOf="@+id/second_hand_button"
         app:layout_constraintTop_toTopOf="@+id/custom_app_dialog_activity"
+        android:src="@drawable/icon_hand02_finger_closed"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="120dp"
