--- a/app/src/main/res/layout/fragment_hand_motion.xml
+++ b/app/src/main/res/layout/fragment_hand_motion.xml
@@ -7,8 +7,6 @@
     android:id="@+id/hand_motion_fragment_layout"
     android:background="#F2F2F2">
 
-
-
     <GridView
         android:id="@+id/hand_motion_gridView"
         android:layout_width="0dp"
@@ -28,6 +26,18 @@
         android:gravity="center"
         >
     </GridView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/hand_add_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="120dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:srcCompat="@drawable/fab_add"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
