--- a/app/src/main/res/layout/activity_blooth_search.xml
+++ b/app/src/main/res/layout/activity_blooth_search.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:id="@+id/blooth_constraintLayout"
     tools:context="com.dragon4.owo.resight_android.Activity.BluetoothSearchActivity"
     android:background="@color/colorPrimary">
@@ -16,8 +15,7 @@
         app:layout_constraintStart_toStartOf="@+id/blooth_constraintLayout"
         android:id="@+id/view"
         android:background="@color/colorBloothMenu"
-
-         />
+        />
 
     <ImageView
         android:id="@+id/blooth_imageView"
@@ -29,7 +27,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
-         />
+        />
 
     <TextView
         android:id="@+id/textView"
@@ -42,7 +40,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-         />
+        />
 
     <com.zcw.togglebutton.ToggleButton
         android:id="@+id/check_blooth_button"
@@ -53,16 +51,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="25dp"
         android:layout_marginEnd="25dp"
-         >
+        >
     </com.zcw.togglebutton.ToggleButton>
 
     <View
+        android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="56dp"
         app:layout_constraintEnd_toEndOf="@+id/blooth_constraintLayout"
         app:layout_constraintStart_toStartOf="@+id/blooth_constraintLayout"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        android:id="@+id/view2"
         android:background="@color/colorBloothMenu"
         />
 
@@ -76,48 +74,66 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
-         />
+        />
 
     <TextView
         android:id="@+id/recent_paring_device_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="최근 페어링 된 기기 : RE-SIGHT 3302 "
         app:layout_constraintStart_toEndOf="@id/paring_imageView"
         app:layout_constraintTop_toBottomOf="@+id/view"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-         />
+        />
+
 
     <TextView
         android:id="@+id/resent_blooth_list_title"
-        android:text="Blooth 목록"
+        android:text="등록된 기기 목록"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/blooth_constraintLayout"
         app:layout_constraintTop_toBottomOf="@+id/view2"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         />
+        />
 
     <ListView
         android:id="@+id/blooth_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/resent_blooth_list_title"
-        android:layout_marginTop="7dp"
-       >
+        android:layout_marginTop="7dp" />
 
-    </ListView>
+    <TextView
+        android:id="@+id/new_blooth_list_title"
+        android:text="새로운 기기 목록"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/blooth_constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/blooth_list"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       />
+
+    <ListView
+        android:id="@+id/new_bluetooth_list"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/new_blooth_list_title"
+        android:layout_marginTop="7dp"
+       />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/blooth_list"
+        app:layout_constraintTop_toBottomOf="@id/new_bluetooth_list"
         app:layout_constraintLeft_toRightOf="@id/blooth_constraintLayout"
         app:layout_constraintRight_toLeftOf="@id/blooth_constraintLayout"
         android:layout_marginTop="36dp"
@@ -125,6 +141,5 @@
         android:layout_marginRight="128dp"
         android:src="@drawable/icon_handphone"
         />
-
 
 </android.support.constraint.ConstraintLayout>
