--- a/app/src/main/res/layout/activity_resight_main.xml
+++ b/app/src/main/res/layout/activity_resight_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dragon4.owo.resight_android.Activity.ReSightMainActivity">
+    tools:context=".View.Activity.ReSightMainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
