--- a/app/src/main/res/menu/menu_resight_main.xml
+++ b/app/src/main/res/menu/menu_resight_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.dragon4.owo.resight_android.Activity.ReSightMainActivity">
+    tools:context=".View.Activity.ReSightMainActivity">
 
     <item
         android:id="@+id/action_bluetooth"
