--- a/app/src/main/res/layout/activity_blooth_search.xml
+++ b/app/src/main/res/layout/activity_blooth_search.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/blooth_constraintLayout"
+    android:layout_height="wrap_content"
     tools:context=".View.Activity.BluetoothSearchActivity"
     android:background="@color/colorPrimary">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/blooth_constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
     <View
         android:layout_width="0dp"
@@ -142,4 +147,6 @@
         android:src="@drawable/icon_handphone"
         />
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
