--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,23 +1,282 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+
     android:id="@+id/hand_motion_fragment_layout"
     android:background="#F2F2F2">
 
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:id="@+id/tabbar_guideline"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="192dp" />
 
+    <Button
+        android:id="@+id/test_mode_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:text="Test Mode"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tabbar_guideline"
+        tools:layout_editor_absoluteY="0dp" />
+    
+    <View
+        android:id="@+id/test_mode_button_bottom"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#595959"
+        app:layout_constraintTop_toBottomOf="@+id/test_mode_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tabbar_guideline" />
+
+
+    <Button
+        android:id="@+id/train_mode_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:text="Train Mode"
+        android:textColor="#ACACAC"
+        app:layout_constraintLeft_toLeftOf="@+id/tabbar_guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <View
+        android:id="@+id/train_mode_button_bottom"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#ACACAC"
+        app:layout_constraintTop_toBottomOf="@+id/train_mode_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/tabbar_guideline" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="인식 동작"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/train_mode_button_bottom"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline2"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_hand00_open"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/train_mode_button_bottom"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline2"
+        />
+
+    <View
+        android:id="@+id/guideline2"
+        android:layout_width="1dp"
+        android:layout_height="144dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/train_mode_button_bottom"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="#95989A"/>
+
+
+    <TextView
+        android:id="@+id/sensor_data_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="센서 측정 압력"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/train_mode_button_bottom"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        app:layout_constraintRight_toRightOf ="parent"
+        />
+
+    <TextView
+        android:id="@+id/sensor1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:text="1번 : "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/sensor2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="42dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:text="2번 : "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/sensor3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="72dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:text="3번 : "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/sensor4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginStart="100dp"
+        android:text="4번 : "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/sensor5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="42dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginStart="100dp"
+        android:text="5번 : "
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/sensor6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_data_title"
+        app:layout_constraintLeft_toRightOf="@+id/guideline2"
+        android:layout_marginTop="72dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginStart="100dp"
+        android:text="6번 : "
+        android:textSize="20sp"
+        />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/sensor_graph_framelayout"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="58dp"
+        android:background="#FFFFFF"
+        >
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph0"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+             />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph1"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintTop_toBottomOf="@+id/sensor_graph0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph2"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintTop_toBottomOf="@+id/sensor_graph1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+             />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph3"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+
+           />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph4"
+            app:layout_constraintTop_toBottomOf="@+id/sensor_graph3"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"/>
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/sensor_graph5"
+            app:layout_constraintTop_toBottomOf="@+id/sensor_graph4"
+            android:layout_width="145dp"
+            android:layout_height="85dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+
+<!--
     <com.jjoe64.graphview.GraphView
         android:id="@+id/sensor_graph0"
         app:layout_constraintTop_toTopOf="parent"
         android:numColumns="auto_fit"
         android:columnWidth="140dp"
         android:stretchMode="columnWidth"
-        android:layout_width="match_parent"
-        android:layout_height="70dp" />
+        android:layout_width="368dp"
+        android:layout_height="70dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/sensor_graph1"
@@ -83,7 +342,7 @@
         android:layout_marginLeft="5dp"
         android:layout_width="0dp"
         android:layout_height="70dp" />
-
+-->
 
 </android.support.constraint.ConstraintLayout>
 
