--- a/app/src/main/res/layout/fragment_monitoring.xml
+++ b/app/src/main/res/layout/fragment_monitoring.xml
@@ -25,7 +25,7 @@
         android:text="Test Mode"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/tabbar_guideline"
-        tools:layout_editor_absoluteY="0dp" />
+         />
     
     <View
         android:id="@+id/test_mode_button_bottom"
@@ -46,7 +46,7 @@
         android:textColor="#ACACAC"
         app:layout_constraintLeft_toLeftOf="@+id/tabbar_guideline"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        />
 
     <View
         android:id="@+id/train_mode_button_bottom"
@@ -57,6 +57,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/tabbar_guideline" />
 
+
+    <!-- 여기부터 레이아웃 -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
