make train mode fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,11 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBottomNavigation">#ACACAC</color>
     <color name="colorBloothMenu">#FFFFFF</color>
+
+
+    <!--  test and train mode bottom Button -->
+
+    <color name="colorTestModeButtonBottom">#595959</color>
+    <color name="colorTrainModeButtonBottom">#ACACAC</color>
+
 </resources>
