custom view error edit

--- a/app/src/main/res/layout/activity_customize_dialog.xml
+++ b/app/src/main/res/layout/activity_customize_dialog.xml
@@ -71,8 +71,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="120dp"
-
-
+        android:onClick="handbuttonClick"
         />
 
     <ImageView
@@ -86,7 +85,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="120dp"
-
+        android:onClick="handbuttonClick"
         />
 
     <TextView
