bluetooth error 해결

--- a/app/src/main/res/layout/activity_blooth_search.xml
+++ b/app/src/main/res/layout/activity_blooth_search.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".View.Activity.BluetoothSearchActivity"
+    tools:context=".view.Activity.BluetoothSearchActivity"
     android:background="@color/colorPrimary">
 
     <android.support.constraint.ConstraintLayout
