--- a/app/src/main/res/layout/activity_hand_motion_select.xml
+++ b/app/src/main/res/layout/activity_hand_motion_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dragon4.owo.resight_android.View.Activity.HandMotionSelectActivity"
+    tools:context="com.dragon4.owo.resight_android.view.Activity.HandMotionSelectActivity"
     android:background="#f2f2f2"
     >
 
