--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".View.Activity.BluetoothSearchActivity"
+    tools:context=".view.Activity.BluetoothSearchActivity"
     android:background="@color/colorPrimary">
 
     <android.support.constraint.ConstraintLayout
