--- a/app/src/main/res/layout/activity_tutorial1.xml
+++ b/app/src/main/res/layout/activity_tutorial1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Activity.TutorialActivity1">
+    tools:context=".view.Activity.TutorialActivity1">
 
     <ImageView
         android:layout_width="wrap_content"
